--- a/pages/works.html
+++ b/pages/works.html
@@ -51,18 +51,6 @@
     </ul>
     </nav>
 
-<!--小さな端末用（800px以下端末）メニュー-->
-<nav id="menubar-s">
-<ul>
-    <li><a href="about.html">ABOUT</a></li>
-    <li><a href="service.html">SERVICE</a></li>
-    <li><a href="news.html">NEWS</a></li>
-    <li><a href="works.html">WORKS</a></li>
-    <li><a href="blog.html">BLOG</a></li>
-    <li><a href="contact.html">CONTACT</a></li>
-</ul>
-</nav>
-
 <div class="inner" id="works">
 <div class="contents">
 
@@ -109,11 +97,9 @@
                 <li>中小企業向け</li>
             </ul>
         </div>
-        <div>
-            <div>
-                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
-                </p>
-            </div>
+        <div class="works-description">
+            <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
+            </p>
         </div>
     </div>
 </div>
@@ -128,11 +114,9 @@
                 <li>中小企業向け</li>
             </ul>
         </div>
-        <div>
-            <div>
-                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
-                </p>
-            </div>
+        <div class="works-description">
+            <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
+            </p>
         </div>
     </div>
 </div>
@@ -147,11 +131,9 @@
                 <li>中小企業向け</li>
             </ul>
         </div>
-        <div>
-            <div>
-                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
-                </p>
-            </div>
+        <div class="works-description">
+            <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
+            </p>
         </div>
     </div>
 </div>
@@ -166,11 +148,8 @@
                 <li>中小企業向け</li>
             </ul>
         </div>
-        <div>
-            <div>
-                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
-                </p>
-            </div>
+        <div class="works-description">
+            <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。</p>
         </div>
     </div>
 </div>
@@ -185,11 +164,8 @@
                 <li>中小企業向け</li>
             </ul>
         </div>
-        <div>
-            <div>
-                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
-                </p>
-            </div>
+        <div class="works-description">
+            <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。</p>
         </div>
     </div>
 </div>
@@ -204,11 +180,8 @@
                 <li>中小企業向け</li>
             </ul>
         </div>
-        <div>
-            <div>
-                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
-                </p>
-            </div>
+        <div class="works-description">
+            <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。</p>
         </div>
     </div>
 </div>
@@ -223,11 +196,8 @@
                 <li>中小企業向け</li>
             </ul>
         </div>
-        <div>
-            <div>
-                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
-                </p>
-            </div>
+        <div class="works-description">
+            <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。</p>
         </div>
     </div>
 </div>
@@ -242,11 +212,8 @@
                 <li>中小企業向け</li>
             </ul>
         </div>
-        <div>
-            <div>
-                <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。
-                </p>
-            </div>
+        <div class="works-description">
+            <p>掲載内容をご連絡いただくだけで、簡単にホームページが公開できるサービスです。</p>
         </div>
     </div>
 </div>
