--- a/pages/lifestyle.html
+++ b/pages/lifestyle.html
@@ -69,30 +69,26 @@
     <h1><img src="../images/lifestyle_ol.svg" alt="かわら版"></h1>
     <div class="text">
     <h2>ライフスタイルサービス</h2>
-    <p>川越経済新聞を中心に、皆さまに情報提供をしていきます。<br>
-        掲載等につきましてはメールにてご連絡ください。
+    <p>GIVは、2020年7月から、「川越経済新聞」を担当しています。その他、旅行情報の提供ポータルサイト「たびいこ」の運営もしています。 川越経済新聞を中心に、地域や世界中の人へ、楽しく、有益な情報をお伝えしていきます。
     </p>
     </div>
     <div class="lifestyle">
+        
         <figure><a href="https://kawagoe.keizai.biz/"><img src="../images/kawagoe_keizai.jpg"></a></figure>
         <div class="text">
-            <h4>川越経済新聞</h4>
-            <div class="lifestyle-introduction">
-                <p>川越経済新聞は広域川越圏のビジネス＆カルチャーニュースをお届けするインターネットの情報配信サービスです。
-                </p>
-                <a href="https://kawagoe.keizai.biz/">川越経済新聞を見てみる ≫</a>
-            </div>
+            <h3>川越経済新聞</h3>
+            <p>川越経済新聞は広域川越圏のビジネス＆カルチャーニュースをお届けするインターネットの情報配信サービスです。
+            </p>
+            <a href="https://kawagoe.keizai.biz/">川越経済新聞を見てみる ≫</a>
         </div>
     </div>
     <div class="lifestyle">
-        <figure><a href="https://kawagoe.keizai.biz/"><img src="../images/tabiko.jpg"></a></figure>
+        <figure><a href="https://tabiko.jp"><img src="../images/tabiko.jpeg"></a></figure>
         <div class="text">
-            <h4>たびいこ</h4>
-            <div class="lifestyle-introduction">
-                <p>たびいこは宿泊予約サービスです。
-                </p>
-                <a href="https://tabiko.jp">たびいこを見てみる ≫</a>
-            </div>
+            <h3>たびいこ</h3>
+            <p>たびいこは宿泊予約サービスです。
+            </p>
+            <a href="https://tabiko.jp">たびいこを見てみる ≫</a>
         </div>
     </div>
 </div>
